WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233574
[GTK] 2.35.1 fails to build for Fedora: undefined reference to 'llint_link_call'
https://bugs.webkit.org/show_bug.cgi?id=233574
Summary
[GTK] 2.35.1 fails to build for Fedora: undefined reference to 'llint_link_call'
Michael Catanzaro
Reported
2021-11-29 10:38:10 PST
2.35.1 fails when building the Fedora package, when linking libjavascriptcoregtk-4.0.so.18.20.0: /tmp/ccDlHdyd.ltrans0.ltrans.o:<artificial>:function llint_link_call_trampoline: error: undefined reference to 'llint_link_call' /tmp/ccDlHdyd.ltrans0.ltrans.o:<artificial>:function llint_virtual_call_trampoline: error: undefined reference to 'llint_virtual_call' /tmp/ccDlHdyd.ltrans0.ltrans.o:<artificial>:function llint_virtual_construct_trampoline: error: undefined reference to 'llint_virtual_call' /tmp/ccDlHdyd.ltrans0.ltrans.o:<artificial>:function llint_virtual_tail_call_trampoline: error: undefined reference to 'llint_virtual_call'
Attachments
Patch
(1.84 KB, patch)
2021-11-29 11:09 PST
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2021-11-29 11:09:52 PST
Created
attachment 445301
[details]
Patch
EWS
Comment 2
2021-11-29 12:18:52 PST
Committed
r286253
(
244616@main
): <
https://commits.webkit.org/244616@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 445301
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug