[GTK] 2.35.1 fails to build for Fedora: undefined reference to 'llint_link_call' https://bugs.webkit.org/show_bug.cgi?id=233574

Unreviewed, add missing attributes.

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-11-29

* llint/LLIntSlowPaths.h:


Canonical link: https://commits.webkit.org/244616@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286253 268f45cc-cd09-0410-ab3c-d52691b4dbfc